{
  "version": 4,
  "terraform_version": "1.13.2",
  "serial": 23,
  "lineage": "361a8fd9-d959-c3c0-b681-744903d58985",
  "resources": [
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:702127848685:vpc/vpc-01e1de141160a9f3d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0fb611a2986c49e9c",
            "default_route_table_id": "rtb-04dbbe11b27a91048",
            "default_security_group_id": "sg-0cce46243b2449fc4",
            "dhcp_options_id": "dopt-0df46e3f89bc4af80",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-01e1de141160a9f3d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04dbbe11b27a91048",
            "owner_id": "702127848685",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0360c520857e3138f",
            "arn": "arn:aws:ec2:us-east-1:702127848685:instance/i-084c02fa19ad89b93",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-084c02fa19ad89b93",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "dev-infrsa-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-05ed2b2da95786bce"
              }
            ],
            "primary_network_interface_id": "eni-05ed2b2da95786bce",
            "private_dns": "ip-172-31-26-237.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.26.237",
            "public_dns": "ec2-3-82-52-202.compute-1.amazonaws.com",
            "public_ip": "3.82.52.202",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-019ae056c4c25fffd",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "dev-infra-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c951e5ec8a7325af",
            "tags": {
              "Environment": "dev",
              "Name": "dev-infra-app-ec2"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "dev-infra-app-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04a2be198da249ec8"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "702127848685",
            "id": "i-084c02fa19ad89b93",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.dev-infra.aws_default_vpc.default",
            "module.dev-infra.aws_key_pair.deployer",
            "module.dev-infra.aws_security_group.my_sec_grp_new"
          ]
        }
      ]
    },
    {
      "module": "module.dev-infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sec_grp_new",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:702127848685:security-group/sg-04a2be198da249ec8",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-04a2be198da249ec8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "dev-infra-app-sg",
            "name_prefix": "",
            "owner_id": "702127848685",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "dev-infra-app-sg"
            },
            "tags_all": {
              "Name": "dev-infra-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e1de141160a9f3d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "702127848685",
            "id": "sg-04a2be198da249ec8",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.dev-infra.aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.prd-infra",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:702127848685:vpc/vpc-01e1de141160a9f3d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0fb611a2986c49e9c",
            "default_route_table_id": "rtb-04dbbe11b27a91048",
            "default_security_group_id": "sg-0cce46243b2449fc4",
            "dhcp_options_id": "dopt-0df46e3f89bc4af80",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-01e1de141160a9f3d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04dbbe11b27a91048",
            "owner_id": "702127848685",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.prd-infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0360c520857e3138f",
            "arn": "arn:aws:ec2:us-east-1:702127848685:instance/i-06fe97d64731d94c3",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06fe97d64731d94c3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "prd-infrsa-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-07839be0ce81aa204"
              }
            ],
            "primary_network_interface_id": "eni-07839be0ce81aa204",
            "private_dns": "ip-172-31-24-146.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.24.146",
            "public_dns": "ec2-18-204-225-218.compute-1.amazonaws.com",
            "public_ip": "18.204.225.218",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0ba55393b96d6af94",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "prd-infra-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c951e5ec8a7325af",
            "tags": {
              "Environment": "prd",
              "Name": "prd-infra-app-ec2"
            },
            "tags_all": {
              "Environment": "prd",
              "Name": "prd-infra-app-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c7316741225cf8ca"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "702127848685",
            "id": "i-06fe97d64731d94c3",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.prd-infra.aws_default_vpc.default",
            "module.prd-infra.aws_key_pair.deployer",
            "module.prd-infra.aws_security_group.my_sec_grp_new"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0360c520857e3138f",
            "arn": "arn:aws:ec2:us-east-1:702127848685:instance/i-0d055a29d954568fe",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d055a29d954568fe",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "prd-infrsa-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-03e0848afd237aaf0"
              }
            ],
            "primary_network_interface_id": "eni-03e0848afd237aaf0",
            "private_dns": "ip-172-31-28-184.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.28.184",
            "public_dns": "ec2-34-201-149-171.compute-1.amazonaws.com",
            "public_ip": "34.201.149.171",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-00616d43562667d4d",
                "volume_size": 20,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "prd-infra-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c951e5ec8a7325af",
            "tags": {
              "Environment": "prd",
              "Name": "prd-infra-app-ec2"
            },
            "tags_all": {
              "Environment": "prd",
              "Name": "prd-infra-app-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0c7316741225cf8ca"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "702127848685",
            "id": "i-0d055a29d954568fe",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.prd-infra.aws_default_vpc.default",
            "module.prd-infra.aws_key_pair.deployer",
            "module.prd-infra.aws_security_group.my_sec_grp_new"
          ]
        }
      ]
    },
    {
      "module": "module.prd-infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sec_grp_new",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:702127848685:security-group/sg-0c7316741225cf8ca",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c7316741225cf8ca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "prd-infra-app-sg",
            "name_prefix": "",
            "owner_id": "702127848685",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "prd-infra-app-sg"
            },
            "tags_all": {
              "Name": "prd-infra-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e1de141160a9f3d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "702127848685",
            "id": "sg-0c7316741225cf8ca",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.prd-infra.aws_default_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.stg-infra",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:702127848685:vpc/vpc-01e1de141160a9f3d",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.31.0.0/16",
            "default_network_acl_id": "acl-0fb611a2986c49e9c",
            "default_route_table_id": "rtb-04dbbe11b27a91048",
            "default_security_group_id": "sg-0cce46243b2449fc4",
            "dhcp_options_id": "dopt-0df46e3f89bc4af80",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "existing_default_vpc": true,
            "force_destroy": false,
            "id": "vpc-01e1de141160a9f3d",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-04dbbe11b27a91048",
            "owner_id": "702127848685",
            "region": "us-east-1"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.stg-infra",
      "mode": "managed",
      "type": "aws_instance",
      "name": "my_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0360c520857e3138f",
            "arn": "arn:aws:ec2:us-east-1:702127848685:instance/i-0cc4c1ff5f3652dd6",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cc4c1ff5f3652dd6",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "stg-infrsa-app-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0b1f8d8fe734cb15b"
              }
            ],
            "primary_network_interface_id": "eni-0b1f8d8fe734cb15b",
            "private_dns": "ip-172-31-28-6.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.28.6",
            "public_dns": "ec2-54-90-177-21.compute-1.amazonaws.com",
            "public_ip": "54.90.177.21",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0751be56772e233bd",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "stg-infra-app-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c951e5ec8a7325af",
            "tags": {
              "Environment": "stg",
              "Name": "stg-infra-app-ec2"
            },
            "tags_all": {
              "Environment": "stg",
              "Name": "stg-infra-app-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0db2a8782cd5b76d8"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "702127848685",
            "id": "i-0cc4c1ff5f3652dd6",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.stg-infra.aws_default_vpc.default",
            "module.stg-infra.aws_key_pair.deployer",
            "module.stg-infra.aws_security_group.my_sec_grp_new"
          ]
        }
      ]
    },
    {
      "module": "module.stg-infra",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "my_sec_grp_new",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:702127848685:security-group/sg-0db2a8782cd5b76d8",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0db2a8782cd5b76d8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "stg-infra-app-sg",
            "name_prefix": "",
            "owner_id": "702127848685",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "stg-infra-app-sg"
            },
            "tags_all": {
              "Name": "stg-infra-app-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01e1de141160a9f3d"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "702127848685",
            "id": "sg-0db2a8782cd5b76d8",
            "region": "us-east-1"
          },
          "dependencies": [
            "module.stg-infra.aws_default_vpc.default"
          ]
        }
      ]
    }
  ]
}